--- a/buttons/secondary-button/secondary-button.mod.css
+++ b/buttons/secondary-button/secondary-button.mod.css
@@ -16,7 +16,7 @@
 
 .button-appearance {
   display: inline-block;
-  background-color: var(--color-white);
+  background-color: var(--new-color-white);
   box-shadow: var(--shadow-7-first), var(--shadow-7-second);
   color: var(--color-black);
   font-size: 1rem;
@@ -71,14 +71,14 @@
 .active:hover {
   box-shadow: var(--shadow-9-first), var(--shadow-9-second),
     var(--shadow-9-third);
-  background-color: var(--color-whiteSnow);
+  background-color: var(--new-color-gray-95);
 }
 
 /* Disabled button */
 
 .active.disabled,
 .disabled {
-  background-color: var(--color-whiteCatskill);
+  background-color: var(--new-color-navy-98);
   color: var(--color-greyNevada);
   box-shadow: var(--shadow-10-first);
   pointer-events: none;
