--- a/tag/tag.mod.css
+++ b/tag/tag.mod.css
@@ -16,7 +16,7 @@
 }
 
 .wrapperTypeNormal {
-  background: var(--color-whiteAlabaster);
+  background: var(--new-color-gray-95);
 }
 
 .wrapperTypeWarning {
