--- a/icons/icons.mod.css
+++ b/icons/icons.mod.css
@@ -1,7 +1,7 @@
 @import '../materials/colors.mod.css';
 
 .theme-black {
-  fill: var(--color-black);
+  fill: var(--new-color-black);
 }
 
 .theme-grey {
