--- a/buttons/secondary-button/secondary-button.mod.css
+++ b/buttons/secondary-button/secondary-button.mod.css
@@ -18,7 +18,7 @@
   display: inline-block;
   background-color: var(--new-color-white);
   box-shadow: var(--shadow-7-first), var(--shadow-7-second);
-  color: var(--color-black);
+  color: var(--new-color-black);
   font-size: 1rem;
   transition: background-color var(--transition-linear-80ms),
     box-shadow var(--transition-easeinout-150ms);
