--- a/inputs/localized-text-input/localized-text-input.mod.css
+++ b/inputs/localized-text-input/localized-text-input.mod.css
@@ -66,7 +66,7 @@
 .pristine {
   composes: input;
   border-color: var(--color-greySolid);
-  color: var(--color-black);
+  color: var(--new-color-black);
 }
 
 .warning {
@@ -102,5 +102,5 @@
 .pristine:active,
 .pristine:focus {
   border-color: var(--new-color-green-25);
-  color: var(--color-black);
+  color: var(--new-color-black);
 }
