--- a/inputs/localized-text-input/localized-text-input.mod.css
+++ b/inputs/localized-text-input/localized-text-input.mod.css
@@ -22,10 +22,10 @@
   flex: 1 0 auto;
   height: var(--height-input);
   line-height: var(--height-input);
-  background-color: var(--color-greyAlabaster);
+  background-color: var(--new-color-gray-95);
   border-top-left-radius: var(--border-radius-6);
   border-bottom-left-radius: var(--border-radius-6);
-  border: var(--border-radius-1) solid var(--color-primaryGrey);
+  border: var(--border-radius-1) solid var(--new-color-gray);
   border-right: 0;
   padding: 0 var(--spacing-8);
   transition: var(--transition-standard);
@@ -65,7 +65,7 @@
 
 .pristine {
   composes: input;
-  border-color: var(--color-greySolid);
+  border-color: var(--new-color-gray-60);
   color: var(--new-color-black);
 }
 
@@ -85,15 +85,15 @@
   composes: input;
   cursor: not-allowed;
   background-color: var(--new-color-navy-98);
-  border-color: var(--color-greyMischka);
-  color: var(--color-greyNevada);
+  border-color: var(--new-color-gray);
+  color: var(--new-color-gray-60);
   opacity: 1; /* fix for mobile safari */
 }
 
 .readonly {
   composes: input;
-  color: var(--color-greyNevada);
-  border-color: var(--color-primaryGrey);
+  color: var(--new-color-gray-60);
+  border-color: var(--new-color-gray);
   cursor: default;
 }
 
