--- a/buttons/flat-button/flat-button.mod.css
+++ b/buttons/flat-button/flat-button.mod.css
@@ -26,13 +26,13 @@
 }
 
 .secondary p {
-  color: var(--color-greyTundora);
+  color: var(--new-color-black);
 }
 
 .disabled p {
-  color: var(--color-primaryGrey);
+  color: var(--new-color-gray);
 }
 
 .button:hover.disabled p {
-  color: var(--color-primaryGrey);
+  color: var(--new-color-gray);
 }
