--- a/inputs/money-numeric-input/money-numeric-input.mod.css
+++ b/inputs/money-numeric-input/money-numeric-input.mod.css
@@ -7,7 +7,7 @@
   border-radius: var(--border-radius-6);
   border-style: solid;
   border-width: 1px;
-  color: var(--color-greyTundora);
+  color: var(--new-color-black);
   font-weight: 500;
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif !important;
@@ -20,7 +20,7 @@
 
 .input {
   composes: input-text;
-  background-color: var(--color-coolGrey);
+  background-color: var(--new-color-gray-95);
   border-color: var(--new-color-white);
   width: 100%;
 }
@@ -28,8 +28,8 @@
 .disabled {
   composes: input;
   background: none;
-  border: 1px solid var(--color-greyMischka);
-  color: var(--color-grey);
+  border: 1px solid var(--new-color-gray);
+  color: var(--new-color-gray-60);
   word-break: break-all;
   hyphens: auto; /* still not supported on Chrome */
 
