--- a/label/label.mod.css
+++ b/label/label.mod.css
@@ -31,7 +31,7 @@
 }
 
 .tone-secondary {
-  background-color: color(var(--color-greyNevada) alpha(15%));
-  border: 1px solid var(--color-greyNevada);
+  background-color: var(--new-color-gray-90);
+  border: 1px solid var(--new-color-gray-60);
   border-radius: 2px;
 }
