--- a/tag/tag.mod.css
+++ b/tag/tag.mod.css
@@ -24,7 +24,7 @@
 }
 
 .disabledWrapper {
-  background: var(--color-coolGrey);
+  background: var(--new-color-gray-95);
 }
 
 .contentWrapper {
@@ -49,7 +49,7 @@
 }
 
 .contentWrapperNormal {
-  border-color: var(--color-secondaryGrey);
+  border-color: var(--new-color-gray-60);
 }
 
 .contentWrapperWarning {
@@ -70,11 +70,11 @@
 
 .clickableContentWrapperWarning:hover {
   border-color: var(--new-color-orange);
-  border-right: 1px solid var(--color-secondaryGrey);
+  border-right: 1px solid var(--new-color-gray-60);
 }
 
 .clickableRemovableContentWrapperNormal:hover {
-  border-right: 1px solid var(--color-secondaryGrey);
+  border-right: 1px solid var(--new-color-gray-60);
 }
 
 .clickableRemovableContentWrapperWarning {
@@ -82,7 +82,7 @@
 }
 
 .disabledContent {
-  color: var(--color-greyDove);
+  color: var(--new-color-black);
 }
 
 .removableContent {
@@ -94,7 +94,7 @@
   align-items: center;
   padding: 0 var(--spacing-4);
   background: inherit;
-  border-color: var(--color-secondaryGrey);
+  border-color: var(--new-color-gray-60);
   border-style: solid;
   border-width: 1px 1px 1px 0;
   border-radius: 0 var(--border-radius-2) var(--border-radius-2) 0;
@@ -123,5 +123,5 @@
 }
 
 .disabledRemove svg {
-  fill: var(--color-greyDove);
+  fill: var(--new-color-black);
 }
